Fix some overflow issues on iOS safari

--- a/client/style/Card.scss
+++ b/client/style/Card.scss
@@ -216,6 +216,10 @@
             }
         }
 
+        pre {
+          word-break: break-all;
+        }
+
         /* Code */
         pre > code {
             background-color: $colorDark3;
